Eliminación de comentarios innecesarios. Eliminación de violaciones findbugs